--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
  	<meta type="author" content="Bao Nguyen">
-	<title>The Static Web HTML + CSS Milestone Challenge</title>
+	<title>About Bao Nguyen</title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -16,8 +16,8 @@
 	  			<h1>Bao Nguyen</h1>
 	    		<h2>Cobol/CICS/DB2 programmer/analysis</h2>
 	    		<h3>Ingram Book Group</h3>
-	    		<p><a href="https://github.com/baonguyen79" target="_blank">github.com/baonguyen79</a></p>
-	    		<h4>Contact information: <span>thimet75@yahoo.com</span></h4>
+	    		<p>GitHub: <a href="https://github.com/baonguyen79" target="_blank">github.com/baonguyen79</a></p>
+          <p>E-mail: <a href="mailto:thimet75@yahoo.com">thimet75@yahoo.com</a> </p>
 	    	</div>
     	</header>
  
@@ -26,20 +26,20 @@
                </p> 
                <h5> My favorite books</h5>            	
                <p>All technical books about programming , but IBM manuals</p>
-        </section>
-
-        <section>
-               <h2></h2>
-               <p></p>
-        </section>
-
-  </article>
-     
+               <h5>What I do when not coding , click to find out
+                 <a href="hobbies.html">
+                  <img src="images/smile.jpg" width="45px" height="45px">                  
+                  </a>
+                  </h5>
+       </section>
+ 
   </div>
+   <p class="spaces"> </p> 
   <div class="footer-container">
+
       <footer>
           <p>Posted by: Bao Nguyen</p>
       </footer>
-   </div>
+  </div>
 </body>
 </html>
